--- a/service/pom.xml
+++ b/service/pom.xml
@@ -11,5 +11,36 @@
 
     <artifactId>service</artifactId>
 
+    <packaging>war</packaging>
+
+
+    <properties>
+                <spring.version>4.1.7.RELEASE </spring.version>
+
+                <jackson.databind.version>2.5.4</jackson.databind.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>skaboosh</groupId>
+            <artifactId>impl</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.databind.version}</version>
+        </dependency>
+    </dependencies>
+
+
 
 </project>
