--- a/service/pom.xml
+++ b/service/pom.xml
@@ -39,6 +39,13 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.databind.version}</version>
         </dependency>
+
+            <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.3</version>
+
+        </dependency>
     </dependencies>
 
 
